# obsidian-tools

./: README.md  obsidian_tool.py  pyproject.toml
