[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "obsidian-tool"
version = "1.0.2"
description = "Sync an Obsidian vault backed by a git repository."
readme = "README.md"
requires-python = ">=3.9"

[project.scripts]
obs = "obsidian_tool:main"

[tool.setuptools]
py-modules = ["obsidian_tool"]
